# think-todo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAPPING.md  PROGRESS.md  README.md  RELEASING.md  SECURITY.md  THINK_TODO_RULES.md  think.db
docs/: INSTALLING.md  beads-native-messaging.md  formula-resolution.md  glossary.md  mol-mall-design.md  overview.md  why-these-features.md
docs/concepts/: convoy.md  identity.md  molecules.md  polecat-lifecycle.md  propulsion-principle.md
docs/design/: architecture.md  convoy-lifecycle.md  dog-pool-architecture.md  escalation-system.md  escalation.md  federation.md  mail-protocol.md  operational-state.md  plugin-system.md  property-layers.md  watchdog-chain.md
docs/examples/: hanoi-demo.md
gastown/: LICENSE  Makefile  README.md  go.mod  go.sum  tasks.json
gastown-prompt/: refinery.md
gastown/cmd/gt/: build_test.go  main.go
gastown/internal/activity/: activity.go  activity_test.go
gastown/internal/agent/: state.go  state_test.go
gastown/internal/beads/: agent_ids.go  agent_ids_test.go  audit.go  beads.go  beads_agent.go  beads_channel.go  beads_channel_test.go  beads_delegation.go  (+24 more)
gastown/npm-package/: .npmignore  README.md  package.json
gastown/scripts/: bump-version.sh  gen_hanoi.py  test-gce-install.sh
gastown/templates/: polecat-CLAUDE.md  witness-CLAUDE.md
prompts/: admin.md  base.md  worker.md
prompts/roles/: mayor.md  witness.md  worker.md
src/: admin.rs  db.rs  main.rs  mayor.rs  monitor.rs  server.rs  store.rs  tmux.rs  worker.rs
ui/: index.html
(+449 files in other folders)
