[package]
name = "think-todo"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
subprocess = "0.2"
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
